[feature/#65] implement courseVideo API in swagger.
