# backend/src/app.ts
@@ -38,7 +38,7 @@ const fileStorage = multer.diskStorage({
       case "courseCover":
         cb(null, 'apiUploads/covers');
         break;
-      case "courseURL":
+      case "video":
         cb(null, 'apiUploads/courses');
         break;
       default:
@@ -75,7 +75,7 @@ app.use(passport.initialize());
 app.use(multer({ storage: fileStorage, fileFilter }).fields([
   { name: 'instructorProfile', maxCount: 1 },
   { name: 'userProfile', maxCount: 1 },
-  { name: 'courseURL', maxCount: 1 },
+  { name: 'video', maxCount: 1 },
   { name: 'courseCover', maxCount: 1 }
 ]));
 app.use("/apiUploads", express.static(path.join(rootDir, "apiUploads")));
@@ -92,8 +92,8 @@ mongoose
     app.use("/api/categories", category_route);
     app.use("/api/users", user_route);
     app.use("/api/instructors", instructor_route);
+    app.use("/api/course/video", course_video_route);
     app.use("/api/courses", course_route);
-    app.use("/api/course-video", course_video_route);
     app.use("/api", auth_route);
     app.use(error)
   });
