# backend/src/routes/course_video_route.ts
@@ -5,26 +5,26 @@ import { createCourseVideo, getCourseVideo, findCourseVideo, deleteCourseVideo, 
 const router = express.Router();
 
 router
-    .route('/')
-    .get(getCourseVideo)
-    .post(
-        [
-            body("courseName").notEmpty().withMessage("Course Name must note be empty"),
-            // body("courseURL").notEmpty().withMessage("Course Video URL must not be empty")
-        ],
-        createCourseVideo
-    )
+  .route('/')
+  .get(getCourseVideo)
+  .post(
+    [
+      body("courseName").notEmpty().withMessage("Course Name must note be empty"),
+      body("video").notEmpty().withMessage("Course Video URL must not be empty")
+    ],
+    createCourseVideo
+  )
 
 router
-    .route('/:id')
-    .get(findCourseVideo)
-    .put(
-        [
-            body("courseName").notEmpty().withMessage("Course Name must note be empty"),
-            // body("courseURL").notEmpty().withMessage("Course Video URL must not be empty")
-        ],
-        updateCourseVideo
-    )
-    .delete(deleteCourseVideo)
+  .route('/:id')
+  .get(findCourseVideo)
+  .put(
+    [
+      body("courseName").notEmpty().withMessage("Course Name must note be empty"),
+      body("video").notEmpty().withMessage("Course Video URL must not be empty")
+    ],
+    updateCourseVideo
+  )
+  .delete(deleteCourseVideo)
 
 export default router;
