# backend/swagger/api.yaml
@@ -13,6 +13,8 @@ tags:
     description: Operations about Instructor
   - name: Course
     description: Operations about Course
+  - name: CourseVideo
+    description: Operations about CourseVideo
   - name: Category
     description: Operations about Category
   - name: User
@@ -680,6 +682,154 @@ paths:
         "401":
           $ref: "#/components/responses/UnauthorizedError"
 
+  # Course Video Routes
+  /api/course/video:
+    get:
+      tags:
+        - CourseVideo
+      summary: Get CourseVideo
+      description: Get CourseVideo
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/courseVideoResponse"
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+    post:
+      tags:
+        - CourseVideo
+      description: Create CourseVideo
+      summary: Create CourseVideo
+      security:
+        - bearerAuth: []
+      operationId: createCourseVideo
+      requestBody:
+        description: Enter CourseVideo Data
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                courseName:
+                  type: string
+                  example: "Angular"
+                description:
+                  type: string
+                  example: "Angular Advanced Tutorial"
+                video:
+                  type: string
+                  format: binary
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/createCourseVideoResponse"
+        "400":
+          description: Invalid course video value
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+
+  /api/course/video/{id}:
+    get:
+      tags:
+        - CourseVideo
+      description: Get CourseVideo by Id
+      summary: Get CourseVideo by Id
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          description: ID of course video to return
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/courseVideoByIdResponse"
+        "400":
+          description: Invalid course video value
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+    put:
+      tags:
+        - CourseVideo
+      description: Update Course Video by Id
+      summary: Update Course Video by Id
+      security:
+        - bearerAuth: []
+      operationId: updateCourseVideoId
+      parameters:
+        - name: id
+          in: path
+          description: ID of CourseVideo to return
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: Enter Course Video Data
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                courseName:
+                  type: string
+                  example: "Angular"
+                description:
+                  type: string
+                  example: "Angular Advanced Tutorial"
+                video:
+                  type: string
+                  format: binary
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/updateCourseVideoResponse"
+        "400":
+          description: Invalid courseVideo value
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+    delete:
+      tags:
+        - CourseVideo
+      description: Delete CourseVideo By Id
+      security:
+        - bearerAuth: []
+      operationId: deleteCourseVideo
+      parameters:
+        - name: id
+          in: path
+          description: CourseVideo Id to delete
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/deleteCourseVideoResponse"
+        "400":
+          description: Invalid CourseVideo value
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+
 components:
   securitySchemes:
     bearerAuth: # arbitrary name for the security scheme
@@ -962,6 +1112,84 @@ components:
           example: 1
 
     deleteUserResponse:
+      type: object
+      properties:
+        message:
+          type: string
+          example: Deleted Successfully!
+        status:
+          type: integer
+          description: The status code
+          example: 1
+
+# CourseVideo Schemas.
+    courseVideoResponse:
+      type: object
+      properties:
+        data:
+          type: array
+          description: courseVideo data
+          example: []
+        status:
+          type: integer
+          description: The status code
+          example: 1
+
+    createCourseVideoResponse:
+      type: object
+      properties:
+        message:
+          type: string
+          example: Created Successfully
+        data:
+          type: object
+          description: category data
+          example:
+            _id: "63194cf2e52affece96486c3"
+            courseName: "Angular"
+            description: "Angular Advanced"
+            video: "apiUploads/courses/angular_lesson1.mp4"
+        status:
+          type: integer
+          description: The status code
+          example: 1
+
+    courseVideoByIdResponse:
+      type: object
+      properties:
+        data:
+          type: array
+          description: courseVideo data
+          example:
+            _id: "63194cf2e52affece96486c3"
+            courseName: "Angular"
+            description: "Angular Advanced"
+            video: "apiUploads/courses/angular_lesson1.mp4"
+        status:
+          type: integer
+          description: The status code
+          example: 1
+
+    updateCourseVideoResponse:
+      type: object
+      properties:
+        message:
+          type: string
+          example: Updated Successfully
+        data:
+          type: object
+          description: category data
+          example:
+            _id: "63194cf2e52affece96486c3"
+            courseName: "Angular"
+            description: "Angular Advanced"
+            video: "apiUploads/courses/angular_lesson1.mp4"
+        status:
+          type: integer
+          description: The status code
+          example: 1
+
+    deleteCourseVideoResponse:
       type: object
       properties:
         message:
